fix out of range

--- a/DataVisualizationAndPrepare.ipynb
+++ b/DataVisualizationAndPrepare.ipynb
@@ -209,28 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      ".jpg\n",
-      ".jpg\n",
-      ".jpg\n",
-      ".jpg\n",
-      ".jpg\n",
-      "['fb925f90-ca04-4f72-96e0-27ac451241bc.png', 'f773a153-449c-4e24-b2ae-10d14d788151.png', 'fdacb09f-0eab-4b79-b765-5a7d3637ae58.png', 'ff958fbf-db3c-4de2-b627-7a8e0bdbb774.png', 'fbcafded-3fe3-4cd8-97ee-d652c52320a4.png']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "images_dir = x_valid_dir\n",
     "masks_dir = y_valid_dir\n",
     "\n",
     "ids = os.listdir(images_dir)\n",
+    "# we need this crutch for .ds_store files\n",
+    "ids = [i for i in ids if get_file_extension(images_dir, i,) == '.jpg']\n",
     "mask_ids = [get_mask_name(images_dir, i, \".png\") for i in ids if get_file_extension(images_dir, i,) == '.jpg']\n",
     "\n",
     "images_fps = [os.path.join(images_dir, image_id) for image_id in ids]\n",
@@ -239,35 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(get_file_extension())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[86], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(images_fps)):\n\u001b[1;32m      2\u001b[0m     img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(images_fps[i])\n\u001b[0;32m----> 3\u001b[0m     mask_img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(\u001b[43mmasks_fps\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m, cv2\u001b[38;5;241m.\u001b[39mIMREAD_UNCHANGED)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(masks_fps[i])\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(images_fps[i])\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "./data_colab/food/valid/masks_machine/fb925f90-ca04-4f72-96e0-27ac451241bc.png\n",
+      "./data_colab/food/valid/img/fb925f90-ca04-4f72-96e0-27ac451241bc.jpg\n",
+      "./data_colab/food/valid/masks_machine/f773a153-449c-4e24-b2ae-10d14d788151.png\n",
+      "./data_colab/food/valid/img/f773a153-449c-4e24-b2ae-10d14d788151.jpg\n",
+      "./data_colab/food/valid/masks_machine/fdacb09f-0eab-4b79-b765-5a7d3637ae58.png\n",
+      "./data_colab/food/valid/img/fdacb09f-0eab-4b79-b765-5a7d3637ae58.jpg\n",
+      "./data_colab/food/valid/masks_machine/ff958fbf-db3c-4de2-b627-7a8e0bdbb774.png\n",
+      "./data_colab/food/valid/img/ff958fbf-db3c-4de2-b627-7a8e0bdbb774.jpg\n",
+      "./data_colab/food/valid/masks_machine/fbcafded-3fe3-4cd8-97ee-d652c52320a4.png\n",
+      "./data_colab/food/valid/img/fbcafded-3fe3-4cd8-97ee-d652c52320a4.jpg\n"
      ]
     }
    ],
