--- a/BeSMPSegmentation.ipynb
+++ b/BeSMPSegmentation.ipynb
@@ -1480,64 +1480,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "tensor([[[[nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          ...,\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan]],\n",
-            "\n",
-            "         [[nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          ...,\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan]],\n",
-            "\n",
-            "         [[nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          ...,\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan]],\n",
-            "\n",
-            "         ...,\n",
-            "\n",
-            "         [[nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          ...,\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan]],\n",
-            "\n",
-            "         [[nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          ...,\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan]],\n",
-            "\n",
-            "         [[nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          ...,\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan],\n",
-            "          [nan, nan, nan,  ..., nan, nan, nan]]]], dtype=torch.float16,\n",
-            "       grad_fn=<SigmoidBackward0>)\n"
-          ]
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 10, 512, 512])"
+            ]
+          },
+          "execution_count": 73,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1545,20 +1499,87 @@
         "import segmentation_models_pytorch as smp\n",
         "import timm\n",
         "\n",
-        "model = best_model #.half()\n",
+        "model = best_model\n",
         "\n",
         "model.eval()\n",
         "model.to(DEVICE)\n",
         "\n",
-        "test_image = torch.randn(1, 3, 512 , 512, requires_grad=False).half().to(DEVICE)\n",
+        "#test_image = torch.randn(1, 3, 512 , 512, requires_grad=False).half().to(DEVICE)\n",
+        "image, gt_mask = test_dataset[n]\n",
+        "test_image = torch.from_numpy(image).half().to(DEVICE).unsqueeze(0)\n",
+        "#print(test_image)\n",
         "orig_out = model(test_image)\n",
-        "orig_out.shape\n",
-        "print(orig_out) # тут что-то не так - nan быть не должно!"
+        "orig_out.shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 68,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[[[0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          ...,\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0]],\n",
+            "\n",
+            "         [[0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          ...,\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0]],\n",
+            "\n",
+            "         [[0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          ...,\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0]],\n",
+            "\n",
+            "         ...,\n",
+            "\n",
+            "         [[0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          ...,\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0]],\n",
+            "\n",
+            "         [[0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          ...,\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0]],\n",
+            "\n",
+            "         [[0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          ...,\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0],\n",
+            "          [0, 0, 0,  ..., 0, 0, 0]]]], dtype=torch.uint8)\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(orig_out.type(torch.uint8))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -1585,62 +1606,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[[[0.3486  0.3677  0.3872  ... 0.3071  0.2964  0.2861 ]\n",
-            "   [0.3723  0.3865  0.401   ... 0.285   0.2844  0.284  ]\n",
-            "   [0.3965  0.4058  0.4148  ... 0.2637  0.2727  0.2817 ]\n",
+            "[[[[0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
             "   ...\n",
-            "   [0.508   0.4841  0.4604  ... 0.2883  0.297   0.306  ]\n",
-            "   [0.525   0.501   0.477   ... 0.2922  0.3008  0.3098 ]\n",
-            "   [0.541   0.5176  0.494   ... 0.296   0.3047  0.3135 ]]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]]\n",
             "\n",
-            "  [[0.072   0.0668  0.06186 ... 0.1938  0.1759  0.1593 ]\n",
-            "   [0.06726 0.06305 0.05908 ... 0.1953  0.1836  0.1724 ]\n",
-            "   [0.0628  0.05954 0.05643 ... 0.1967  0.1914  0.1863 ]\n",
+            "  [[0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
             "   ...\n",
-            "   [0.03053 0.0326  0.0348  ... 0.1376  0.1521  0.168  ]\n",
-            "   [0.03397 0.036   0.03818 ... 0.1351  0.1511  0.1687 ]\n",
-            "   [0.03775 0.03973 0.04184 ... 0.1328  0.1501  0.1693 ]]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]]\n",
             "\n",
-            "  [[0.04733 0.04486 0.04248 ... 0.11633 0.1038  0.0925 ]\n",
-            "   [0.04974 0.04645 0.04337 ... 0.12354 0.1102  0.0982 ]\n",
-            "   [0.05225 0.0481  0.04425 ... 0.1311  0.11694 0.1041 ]\n",
+            "  [[0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
             "   ...\n",
-            "   [0.0963  0.0962  0.096   ... 0.1231  0.1407  0.1605 ]\n",
-            "   [0.10034 0.1002  0.10016 ... 0.1292  0.1478  0.1687 ]\n",
-            "   [0.1045  0.1045  0.1045  ... 0.1354  0.1552  0.1771 ]]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]]\n",
             "\n",
             "  ...\n",
             "\n",
-            "  [[0.1305  0.1252  0.1201  ... 0.11896 0.137   0.1571 ]\n",
-            "   [0.0965  0.09174 0.08716 ... 0.1009  0.1187  0.1392 ]\n",
-            "   [0.0706  0.06647 0.06256 ... 0.0853  0.10266 0.123  ]\n",
+            "  [[0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
             "   ...\n",
-            "   [0.08795 0.0766  0.06665 ... 0.08    0.0847  0.0897 ]\n",
-            "   [0.09955 0.0859  0.0739  ... 0.08466 0.0895  0.09454]\n",
-            "   [0.1125  0.0961  0.0819  ... 0.0896  0.0945  0.09955]]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]]\n",
             "\n",
-            "  [[0.10834 0.10333 0.09845 ... 0.1774  0.1549  0.1348 ]\n",
-            "   [0.08386 0.07996 0.07623 ... 0.135   0.1207  0.10767]\n",
-            "   [0.0645  0.06155 0.05872 ... 0.10156 0.09326 0.0855 ]\n",
+            "  [[0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
             "   ...\n",
-            "   [0.09894 0.0775  0.0604  ... 0.0599  0.0684  0.07806]\n",
-            "   [0.1122  0.08795 0.06854 ... 0.06305 0.07196 0.082  ]\n",
-            "   [0.1268  0.0996  0.07764 ... 0.06635 0.0756  0.086  ]]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]]\n",
             "\n",
-            "  [[0.4097  0.3691  0.33    ... 0.11084 0.1255  0.1417 ]\n",
-            "   [0.351   0.3098  0.2712  ... 0.0961  0.1081  0.12134]\n",
-            "   [0.2966  0.256   0.2194  ... 0.0832  0.0929  0.1035 ]\n",
+            "  [[0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
             "   ...\n",
-            "   [0.2352  0.2169  0.1996  ... 0.3591  0.4185  0.4805 ]\n",
-            "   [0.2673  0.2478  0.2292  ... 0.4177  0.4824  0.548  ]\n",
-            "   [0.3018  0.2815  0.262   ... 0.4788  0.547   0.6133 ]]]]\n"
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]\n",
+            "   [0 0 0 ... 0 0 0]]]]\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/evakhromeeva/Library/Python/3.9/lib/python/site-packages/onnxruntime/capi/onnxruntime_inference_collection.py:69: UserWarning: Specified provider 'TensorrtExecutionProvider' is not in available provider names.Available providers: 'CoreMLExecutionProvider, AzureExecutionProvider, CPUExecutionProvider'\n",
+            "  warnings.warn(\n"
           ]
         }
       ],
@@ -1662,9 +1691,17 @@
         "\n",
         "import numpy as np\n",
         "onnx_out = onnx_forward('model.onnx', test_image)\n",
-        "print(onnx_out) #.astype('uint8')\n",
-        "#np.testing.assert_almost_equal(torch_out.data.cpu().numpy(), onnx_out, decimal=1)\n",
-        "#np.testing.assert_almost_equal(orig_out.data.cpu().numpy(), torch_out.data.cpu().numpy(), decimal=1)"
+        "print(onnx_out.astype('uint8')) #.astype('uint8')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 80,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "np.testing.assert_almost_equal(orig_out.type(torch.uint8).data.cpu().numpy(), onnx_out.astype('uint8'), decimal=1)\n",
+        "np.testing.assert_almost_equal(orig_out.type(torch.uint8).data.cpu().numpy(), orig_out.type(torch.uint8).data.cpu().numpy(), decimal=1)"
       ]
     }
   ],
