--- a/BeSMPSegmentation.ipynb
+++ b/BeSMPSegmentation.ipynb
@@ -1507,7 +1507,7 @@
         "#test_image = torch.randn(1, 3, 512 , 512, requires_grad=False).half().to(DEVICE)\n",
         "image, gt_mask = test_dataset[n]\n",
         "test_image = torch.from_numpy(image).half().to(DEVICE).unsqueeze(0)\n",
-        "#print(test_image)\n",
+        "\n",
         "orig_out = model(test_image)\n",
         "orig_out.shape"
       ]
@@ -1691,7 +1691,7 @@
         "\n",
         "import numpy as np\n",
         "onnx_out = onnx_forward('model.onnx', test_image)\n",
-        "print(onnx_out.astype('uint8')) #.astype('uint8')"
+        "print(onnx_out.astype('uint8'))"
       ]
     },
     {
